# Huectl

./: Cargo.toml  README.md
docs/: README.md  hooks.md  templates.md  themes.md  wallpapers.md
src/: cache.rs  cli.rs  main.rs  template.rs  theme.rs  utils.rs  wallpaper.rs
