[package]
name = "huectl"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "huectl"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
directories = "6.0.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
walkdir = "2.5.0"
